--- a/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.html
@@ -5,23 +5,25 @@
 
 
     <div class="section">
+        <div class="section-cards">
+            <mat-card>
+                <mat-card-header [routerLink]="['/rock']">
+                    <mat-card-subtitle i18n="Subtitle">Rockport - 1609m</mat-card-subtitle>
+                </mat-card-header>
+            </mat-card>
+            <mat-card>
+                <mat-card-header [routerLink]="['/ukk']">
+                    <mat-card-subtitle i18n="Subtitle">Instituto UKK Finlândia<br />Kukkonen-Harjula et Al - 2000m
+                    </mat-card-subtitle>
+                </mat-card-header>
+            </mat-card>
+            <mat-card>
+                <mat-card-header [routerLink]="['/cureton']">
+                    <mat-card-subtitle i18n="Subtitle">Cureton et Al - 1609m</mat-card-subtitle>
+                </mat-card-header>
+            </mat-card>
+        </div>
 
-        <mat-card>
-            <mat-card-header [routerLink]="['/rock']">
-                <mat-card-subtitle i18n="Subtitle">Rockport - 1609m</mat-card-subtitle>
-            </mat-card-header>
-        </mat-card>
-        <mat-card>
-            <mat-card-header [routerLink]="['/ukk']">
-                <mat-card-subtitle i18n="Subtitle">Instituto UKK Finlândia<br />Kukkonen-Harjula et Al - 2000m
-                </mat-card-subtitle>
-            </mat-card-header>
-        </mat-card>
-        <mat-card>
-            <mat-card-header [routerLink]="['/cureton']">
-                <mat-card-subtitle i18n="Subtitle">Cureton et Al - 1609m</mat-card-subtitle>
-            </mat-card-header>
-        </mat-card>
 
     </div>
     <div class="footer">
