--- a/src/app/avaliation/av-dash/av-dash.component.scss
+++ b/src/app/avaliation/av-dash/av-dash.component.scss
@@ -5,6 +5,11 @@
   background-size: cover;
   background-position: center;
 }
+.mat-accordion{
+  width: 360px;
+  margin: auto;
+}
+
 .mat-expansion-panel {
   background-color: rgba(247, 238, 238, 0.704);
 }
