--- a/src/app/avaliation/composicao-corporal/cc.component.scss
+++ b/src/app/avaliation/composicao-corporal/cc.component.scss
@@ -11,6 +11,11 @@
   align-items: center;
 }
 
+.mat-accordion{
+  width: 360px;
+  margin: auto;
+}
+
 mat-expansion-panel {
   background-color: rgba(247, 248, 238, 0.604);
   border-radius: 4px;
