--- a/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.html
+++ b/src/app/avaliation/flexibilidade/flex-dash/flex-dash.component.html
@@ -4,30 +4,33 @@
     </div>
 
     <div class="section">
-        <mat-card>
-            <mat-card-header [routerLink]="['/goniometro/']">
-                <mat-card-subtitle i18n="Subtitle">Goniômetro
-                </mat-card-subtitle>
-            </mat-card-header>
-        </mat-card>
-        <mat-card>
-            <mat-card-header [routerLink]="['/fleximetro/']">
-                <mat-card-subtitle i18n="Subtitle">Flexímetro
-                </mat-card-subtitle>
-            </mat-card-header>
-        </mat-card>
-        <mat-card>
-            <mat-card-header [routerLink]="['/flexiteste/']">
-                <mat-card-subtitle i18n="Subtitle">Flexiteste
-                </mat-card-subtitle>
-            </mat-card-header>
-        </mat-card>
-        <mat-card>
-            <mat-card-header [routerLink]="['/bwd/']">
-                <mat-card-subtitle i18n="Subtitle">Banco de Wells & Dillon (adaptado)
-                </mat-card-subtitle>
-            </mat-card-header>
-        </mat-card>
+        <div class="section-cards">
+            <mat-card>
+                <mat-card-header [routerLink]="['/goniometro/']">
+                    <mat-card-subtitle i18n="Subtitle">Goniômetro
+                    </mat-card-subtitle>
+                </mat-card-header>
+            </mat-card>
+            <mat-card>
+                <mat-card-header [routerLink]="['/fleximetro/']">
+                    <mat-card-subtitle i18n="Subtitle">Flexímetro
+                    </mat-card-subtitle>
+                </mat-card-header>
+            </mat-card>
+            <mat-card>
+                <mat-card-header [routerLink]="['/flexiteste/']">
+                    <mat-card-subtitle i18n="Subtitle">Flexiteste
+                    </mat-card-subtitle>
+                </mat-card-header>
+            </mat-card>
+            <mat-card>
+                <mat-card-header [routerLink]="['/bwd/']">
+                    <mat-card-subtitle i18n="Subtitle">Banco de Wells & Dillon (adaptado)
+                    </mat-card-subtitle>
+                </mat-card-header>
+            </mat-card>
+        </div>
+
     </div>
 
     <div class="footer">
