--- a/src/app/avaliation/CardioPulmunar/teste-banco/teste-banco.component.scss
+++ b/src/app/avaliation/CardioPulmunar/teste-banco/teste-banco.component.scss
@@ -1,20 +1,23 @@
 .container {
-    background-image: url("./../../../../assets/img/CON 012.JPG");
-    background-repeat: no-repeat;
-    background-blend-mode: normal;
-    background-size: cover;
-    background-position: center;
-  }
-  
-  .section{
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-  }
-  
-  .mat-card{
-    height: 30px;
-    width: 280px;
-    background-color: rgba(247, 238, 238, 0.704);
-    margin-bottom: 1px;
-  }
+  background-image: url("./../../../../assets/img/CON 012.JPG");
+  background-repeat: no-repeat;
+  background-blend-mode: normal;
+  background-size: cover;
+  background-position: center;
+}
+
+.section {
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+
+.section-cards {
+  width: 360px;
+  margin: auto;
+}
+.mat-card {
+  height: 30px;
+  background-color: rgba(247, 238, 238, 0.704);
+  margin-bottom: 1px;
+}
