--- a/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
@@ -2,25 +2,27 @@
     <div class="header">
         <h1 i18n>Testes de Bicicleta</h1>
     </div>
-    
+
 
     <div class="section">
+        <div class="section-cards">
+            <mat-card>
+                <mat-card-header [routerLink]="['/astryh']">
+                    <mat-card-subtitle i18n="Subtitle">Astrand-Ryhming</mat-card-subtitle>
+                </mat-card-header>
+            </mat-card>
+            <mat-card>
+                <mat-card-header [routerLink]="['/balke']">
+                    <mat-card-subtitle i18n="Subtitle">Balke e Ware</mat-card-subtitle>
+                </mat-card-header>
+            </mat-card>
+            <mat-card>
+                <mat-card-header [routerLink]="['/ymca']">
+                    <mat-card-subtitle i18n="Subtitle">YMCA - Golding, Myers & Sinning</mat-card-subtitle>
+                </mat-card-header>
+            </mat-card>
+        </div>
 
-                <mat-card>
-                    <mat-card-header [routerLink]="['/astryh']">
-                        <mat-card-subtitle i18n="Subtitle">Astrand-Ryhming</mat-card-subtitle>
-                    </mat-card-header>
-                </mat-card>
-                <mat-card>
-                    <mat-card-header [routerLink]="['/balke']">
-                        <mat-card-subtitle i18n="Subtitle">Balke e Ware</mat-card-subtitle>
-                    </mat-card-header>
-                </mat-card>
-                <mat-card>
-                    <mat-card-header [routerLink]="['/ymca']">
-                        <mat-card-subtitle i18n="Subtitle">YMCA - Golding, Myers & Sinning</mat-card-subtitle>
-                    </mat-card-header>
-                </mat-card>
 
     </div>
     <div class="footer">
@@ -29,5 +31,3 @@
         </a>
     </div>
 </div>
-
-
