--- a/src/app/avaliation/CardioPulmunar/teste-piscina/teste-piscina.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-piscina/teste-piscina.component.html
@@ -3,11 +3,14 @@
         <h1 i18n>Testes em Piscina</h1>
     </div>
     <div class="section">
-        <mat-card>
-            <mat-card-header [routerLink]="['/natacao']">
-                <mat-card-subtitle i18n="Subtitle">Natação - Nado Crawl na piscina - 12min</mat-card-subtitle>
-            </mat-card-header>
-        </mat-card>
+        <div class="section-cards">
+            <mat-card>
+                <mat-card-header [routerLink]="['/natacao']">
+                    <mat-card-subtitle i18n="Subtitle">Natação - Nado Crawl na piscina - 12min</mat-card-subtitle>
+                </mat-card-header>
+            </mat-card>
+        </div>
+
     </div>
     <div class="footer">
         <a mat-mini-fab color="primary" (click)="goBack()">
