--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,10 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+em{
+  font-size: smaller;
+}
+
 .container {
   width: 100vw;
   height: 92vh;
