--- a/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
+++ b/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h1 i18n>Goniómetro</h1>
+        <h1 i18n>Goniômetro</h1>
     </div>
 
     <div class="section">
