--- a/src/app/avaliation/risco/rddc/rddc.component.html
+++ b/src/app/avaliation/risco/rddc/rddc.component.html
@@ -53,7 +53,7 @@
             </mat-card>
             <mat-card>
                 <mat-card-header>
-                    <mat-card-subtitle i18n>Com que frequência faz regularmente alongamnetos?</mat-card-subtitle>
+                    <mat-card-subtitle i18n>Com que frequência faz regularmente alongamentos?</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
                     <mat-list>
