--- a/src/app/commun/menu/menu.component.html
+++ b/src/app/commun/menu/menu.component.html
@@ -2,7 +2,7 @@
     <span><a routerLink="/dash">ALPHA PRO SYSTEM</a></span>
     <span class="menu-spacer"></span>
     <span class="menu-username" *ngIf="selectedStudent.id"><a routerLink="/new/{{selectedStudent.id}}">{{selectedStudent.nome}}</a></span>
-    <a [routerLink]="['/menuDash/']">
+    <a [routerLink]="['/configs']">
         <mat-icon class="menu-icon" aria-hidden="false" aria-label="menu">menu</mat-icon>
     </a>
     <mat-icon class="menu-icon" aria-hidden="false" aria-label="log out" (click)="logout()">power_settings_new</mat-icon>
