--- a/src/app/avaliation/CardioPulmunar/natacao/natacao.component.scss
+++ b/src/app/avaliation/CardioPulmunar/natacao/natacao.component.scss
@@ -15,7 +15,18 @@
   .mat-card-header{
     justify-content: center;
   }
+
+  .table{
+    font-size: smaller;
+    td, th {
+      border: 1px solid #999;
+      padding: 0.5rem;
+    }
+  }
   
+  em{
+    font-size: x-small;
+  }
   @media only screen and (min-width: 768px){
     .section-info{
       width: 60%;
