--- a/src/app/avaliation/risco/qpaf/qpaf.component.scss
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.scss
@@ -1,10 +1,4 @@
-.container {
-    background-image: url("./../../../../assets/img/CON 012.JPG");
-    background-repeat: no-repeat;
-    background-blend-mode: normal;
-    background-size: cover;
-    background-position: center; 
-}
+
 
 .header {
     h1 {
@@ -12,10 +6,6 @@
     }
 }
 
-.mat-card{
-    width: 280px;
-    margin-bottom: 4px;
-}
 .flex-radio-group{
     display: flex;
     flex-direction: row;
@@ -37,14 +27,30 @@ em {
 
 
 @media only screen and (min-width: 768px) {
-
-    .section {
-        width: 60%;
+    .container {
+        background-image: url("./../../../../assets/img/CON 012.JPG");
+        background-repeat: no-repeat;
+        background-blend-mode: normal;
+        background-size: cover;
+        background-position: center; 
     }
 
+    .flex-form{
+        width: 50%;
+        margin: auto;
+    }
+    .mat-card {
+        width: 90%;
+        margin-bottom: 4px;
+        display: inline-flex;
+    }
 
     ::-webkit-scrollbar {
         width: 0px;
         background: transparent; /* make scrollbar transparent */
+    }
+
+    em {
+        color: white;
     }
 }
