--- a/src/app/avaliation/risco/rdc/rdc.component.html
+++ b/src/app/avaliation/risco/rdc/rdc.component.html
@@ -15,13 +15,13 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Sistólica</mat-label>
-                                <input matInput #qtas="ngModel" name="qtas" [(ngModel)]="rdcData.qtas">
+                                <input matInput #qtas="ngModel" name="qtas" [(ngModel)]="rdcData.qtas" (change)="calcRisco()">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Diastólica</mat-label>
-                                <input matInput #qtad="ngModel" name="qtad" [(ngModel)]="rdcData.qtad">
+                                <input matInput #qtad="ngModel" name="qtad" [(ngModel)]="rdcData.qtad" (change)="calcRisco()">
                             </mat-form-field>
                         </mat-list-item>
                     </mat-list>
@@ -51,25 +51,25 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Colesterol Total</mat-label>
-                                <input matInput #lsc="ngModel" name="lsc" [(ngModel)]="rdcData.lsc">
+                                <input matInput #lsc="ngModel" name="lsc" [(ngModel)]="rdcData.lsc" (change)="calcRisco()">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Fração CT/HDL-C</mat-label>
-                                <input matInput #lsf="ngModel" name="lsf" [(ngModel)]="rdcData.lsf">
+                                <input matInput #lsf="ngModel" name="lsf" [(ngModel)]="rdcData.lsf" (change)="calcRisco()">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Triglicerídeos</mat-label>
-                                <input matInput #lst="ngModel" name="lst" [(ngModel)]="rdcData.lst">
+                                <input matInput #lst="ngModel" name="lst" [(ngModel)]="rdcData.lst" (change)="calcRisco()">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Glicemia</mat-label>
-                                <input matInput #lsg="ngModel" name="lsg" [(ngModel)]="rdcData.lsg">
+                                <input matInput #lsg="ngModel" name="lsg" [(ngModel)]="rdcData.lsg" (change)="calcRisco()">
                             </mat-form-field>
                         </mat-list-item>
                     </mat-list>
@@ -83,7 +83,7 @@
                     <mat-list>
                         <mat-list-item>
                             <mat-form-field>
-                                <mat-select #diabetes="ngModel" name="diabetes" [(ngModel)]="rdcData.diabetes">
+                                <mat-select #diabetes="ngModel" name="diabetes" [(ngModel)]="rdcData.diabetes" (selectionChange)="calcRisco()">
                                     <mat-option value="0" i18n>Não</mat-option>
                                     <mat-option value="1" i18n>DMNID*</mat-option>
                                     <mat-option value="2" i18n>DMNID* Recente</mat-option>
@@ -104,7 +104,7 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>percentagem</mat-label>
-                                <input matInput #gc="ngModel" name="gc" [(ngModel)]="rdcData.gc">
+                                <input matInput #gc="ngModel" name="gc" [(ngModel)]="rdcData.gc" (change)="calcRisco()">
                             </mat-form-field>
                         </mat-list-item>
                     </mat-list>
@@ -118,7 +118,7 @@
                     <mat-list>
                         <mat-list-item>
                             <mat-form-field>
-                                <mat-select #st="ngModel" name="st" [(ngModel)]="rdcData.st">
+                                <mat-select #st="ngModel" name="st" [(ngModel)]="rdcData.st" (selectionChange)="calcRisco()">
                                     <mat-option value="0" i18n>Nunca</mat-option>
                                     <mat-option value="1" i18n>quase nunca</mat-option>
                                     <mat-option value="2" i18n>às vezes</mat-option>
@@ -139,13 +139,14 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Frequência Semanal</mat-label>
-                                <input matInput #afs="ngModel" name="afs" [(ngModel)]="student.afs" placeholder="vezes por semana">
+                                <input matInput #afs="ngModel" name="afs" [(ngModel)]="student.afs"
+                                    placeholder="vezes por semana" (change)="calcRisco()">
                             </mat-form-field>
                         </mat-list-item>
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Minutos/Semana</mat-label>
-                                <mat-select #af50="ngModel" name="af50" [(ngModel)]="rdcData.af50">
+                                <mat-select #af50="ngModel" name="af50" [(ngModel)]="rdcData.af50" (selectionChange)="calcRisco()">
                                     <mat-option value="0">120</mat-option>
                                     <mat-option value="1">90</mat-option>
                                     <mat-option value="2">30</mat-option>
@@ -187,33 +188,25 @@
             </mat-card>
             <mat-card class="mat-card-resultado">
                 <mat-card-header>
-                    <mat-card-subtitle>NÍVEL DE RISCO</mat-card-subtitle>
+                    <mat-card-title>NÍVEL DE RISCO</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                        <span i18n *ngIf="risco <= 1">Baixo</span>
-                        <span i18n *ngIf="risco == 2">Moderado</span>
-                        <span i18n *ngIf="risco == 3">Alto</span>
-                        <span i18n *ngIf="risco > 3">Muito Alto</span>
+                    <span i18n *ngIf="risco <= 1">Baixo</span>
+                    <span i18n *ngIf="risco == 2">Moderado</span>
+                    <span i18n *ngIf="risco == 3">Alto</span>
+                    <span i18n *ngIf="risco > 3">Muito Alto</span>
                 </mat-card-content>
             </mat-card>
 
-            <div class="action">
-                <button mat-fab type="button" color="default" (click)="goBack()">
-                    <mat-icon>close</mat-icon>
+            <div class="footer">
+                <button mat-mini-fab color="primary" (click)="goBack()">
+                    <mat-icon>undo</mat-icon>
                 </button>
-                <button mat-fab type="submit">
-                    <mat-icon>check</mat-icon>
+                <button mat-mini-fab color="primary">
+                    <mat-icon>redo</mat-icon>
                 </button>
             </div>
         </form>
-    </div>
-    <div class="footer">
-        <button mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </button>
-        <a mat-mini-fab color="primary" [routerLink]="['/rddc']">
-            <mat-icon>redo</mat-icon>
-        </a>
     </div>
 
 </div>
