--- a/src/app/avaliation/risco/rddc/rddc.component.html
+++ b/src/app/avaliation/risco/rddc/rddc.component.html
@@ -5,7 +5,7 @@
 
     <div class="section">
         <form class="flex-form" #f="ngForm" (submit)="save(f.value)">
-<!--             <mat-card>
+            <!--             <mat-card>
                 <mat-card-header>
                     <mat-card-title>Data da Avaliação</mat-card-title>
                 </mat-card-header>
@@ -38,7 +38,9 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Frequência semanal</mat-label>
-                                <mat-select #objetos="ngModel" name="objetos" [(ngModel)]="data.objetos">
+                                <mat-select #objetos="ngModel" name="objetos" 
+                                            [(ngModel)]="data.objetos" 
+                                            (selectionChange)="calcRisco()">
                                     <mat-option value="0" i18n>Nunca</mat-option>
                                     <mat-option value="1" i18n>1 a 2</mat-option>
                                     <mat-option value="2" i18n>3 a 4</mat-option>
@@ -60,7 +62,9 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Frequência semanal</mat-label>
-                                <mat-select #alonga="ngModel" name="alonga" [(ngModel)]="data.alonga">
+                                <mat-select #alonga="ngModel" name="alonga" 
+                                            [(ngModel)]="data.alonga" 
+                                            (selectionChange)="calcRisco()">
                                     <mat-option value="3" i18n>Não faz</mat-option>
                                     <mat-option value="2" i18n>1 vez</mat-option>
                                     <mat-option value="1" i18n>2 vezes</mat-option>
@@ -81,7 +85,7 @@
                         <mat-list-item>
                             <mat-form-field>
                                 <mat-label i18n>Selecione</mat-label>
-                                <mat-select #peso="ngModel" name="peso" [(ngModel)]="data.peso">
+                                <mat-select #peso="ngModel" name="peso" [(ngModel)]="data.peso" (selectionChange)="calcRisco()">
                                     <mat-option value="0" i18n>Não</mat-option>
                                     <mat-option value="1" i18n>0 a 2,9Kg</mat-option>
                                     <mat-option value="2" i18n>3 a 5,9Kg</mat-option>
@@ -117,7 +121,9 @@
                 <mat-card-content>
                     <mat-list>
                         <mat-list-item>
-                            <mat-radio-group aria-label="Selecione" #dor="ngModel" name="dor" [(ngModel)]="data.dor">
+                            <mat-radio-group aria-label="Selecione" #dor="ngModel" name="dor" 
+                                            [(ngModel)]="data.dor" 
+                                            (selectionChange)="calcRisco()">
                                 <mat-radio-button value="3" i18n>Sim</mat-radio-button>
                                 <mat-radio-button value="0" i18n>Não</mat-radio-button>
                             </mat-radio-group>
@@ -125,50 +131,49 @@
                     </mat-list>
                 </mat-card-content>
             </mat-card>
-            <div class="action">
-                <button mat-fab type="button" color="default" (click)="goBack()">
-                    <mat-icon>close</mat-icon>
+
+            <!-- Resultado -->
+            <mat-card class="mat-card-resultado">
+                <mat-card-header>
+                    <mat-card-title>NÍVEL DE RISCO</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <h4>{{+risco}} - 
+                    <span i18n *ngIf="risco == 0">Muito Baixo</span>
+                    <span i18n *ngIf="risco >= 1 && risco < 5">Baixo</span>
+                    <span i18n *ngIf="risco >= 5 && risco < 9">Potencial</span>
+                    <span i18n *ngIf="risco >= 9 && risco < 13">Moderado</span>
+                    <span i18n *ngIf="risco >= 13 && risco < 17">Importante</span>
+                    <span i18n *ngIf="risco >= 17">Sério</span>
+                </h4>
+                </mat-card-content>
+            </mat-card>
+
+            <div class="footer">
+                <button mat-mini-fab color="primary" (click)="goBack()">
+                    <mat-icon>undo</mat-icon>
                 </button>
-                <button mat-fab type="submit">
-                    <mat-icon>check</mat-icon>
+                <button mat-mini-fab color="primary">
+                    <mat-icon>redo</mat-icon>
                 </button>
             </div>
         </form>
-
-
-        <!-- <div class="information"> -->
-            <mat-card>
-                <mat-card-header>
-                    <mat-card-title i18n>Resultado da Avaliação </mat-card-title>
-                </mat-card-header>
-                <mat-card-content *ngIf="dor.value">
-                    <h1>{{+points + +objetos.value + +alonga.value + +peso.value + +dor.value}}</h1>
-                </mat-card-content>
-            </mat-card>
-            <div class="text-box">
-                <ul>
-                    <li i18n>0 - Você está fazendo o necessário pra prevenir dor na coluna.</li>
-                    <li i18n>1 a 2 - Risco baixo. Você está fazendo varias coisas a fim de prevenir problemas futuros.
-                    </li>
-                    <li i18n>5 a 8 - Risco potencial. Você deverá mudar alguns dos seus hábitos.</li>
-                    <li i18n>9 a 12 - Risco moderado. Procure um médico para aprender mais sobre prevenção de problemas
-                        na
-                        coluna.</li>
-                    <li i18n>13 a 16 - Risco importante. Você deverá mudar rapidamente os seus hábitos a fim de não
-                        apresentar problemas futuros.</li>
-                    <li i18n>17 a 20 - Risco sério. Você terá dor na coluna.</li>
-                </ul>
-                <em i18n>Fonte: Goldenberg, José (2004)</em>
-            </div>
-        <!-- </div> -->
-    </div>
-    <div class="footer">
-        <button mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </button>
-        <a mat-mini-fab color="primary" [routerLink]="['/avDash']">
-            <mat-icon>redo</mat-icon>
-        </a>
-
     </div>
 </div>
+
+<!-- 
+<div class="text-box">
+    <ul>
+        <li i18n>0 - Você está fazendo o necessário pra prevenir dor na coluna.</li>
+        <li i18n>1 a 2 - Risco baixo. Você está fazendo varias coisas a fim de prevenir problemas futuros.
+        </li>
+        <li i18n>5 a 8 - Risco potencial. Você deverá mudar alguns dos seus hábitos.</li>
+        <li i18n>9 a 12 - Risco moderado. Procure um médico para aprender mais sobre prevenção de problemas
+            na
+            coluna.</li>
+        <li i18n>13 a 16 - Risco importante. Você deverá mudar rapidamente os seus hábitos a fim de não
+            apresentar problemas futuros.</li>
+        <li i18n>17 a 20 - Risco sério. Você terá dor na coluna.</li>
+    </ul>
+    <em i18n>Fonte: Goldenberg, José (2004)</em>
+</div> -->
