--- a/src/app/dashboard/dash/dash.component.scss
+++ b/src/app/dashboard/dash/dash.component.scss
@@ -1,21 +1,22 @@
 .container{
-    background-image: url("./../../../assets/img/scott-webb-KblIFRq1jkg-unsplash.jpg");
+ // background-image: url("./../../../assets/img/scott-webb-KblIFRq1jkg-unsplash.jpg");
+  background-image: url("./../../../assets/img/alphapro2.jpg");
     background-size: cover;
     background-position: center;
     height: 95vh;
   }
 
   .dash-form{
-    width: 96%;
+    width: 84%;
     height: 230px;
     position: absolute;
-    top: 50%;
+    bottom: 50px;
     left: 50%;
     transform: translate( -50%, 0);
     background-color: rgba($color: whitesmoke, $alpha: .50);
     color: black;
     font-size: small;
-    border-radius: 10%;
+    border-radius: 10px;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -23,12 +24,13 @@
 
     .mat-form-field{
       font-size: small;
-      width: 300px;
+      width: 280px;
     }
   }
   @media only screen and (min-width: 768px) {
     .dash-form{
       width: 50%;
+      top: 50%;
     }
   }
   .dash-buttons-action{
