refactoring 2, risco, dash

--- a/src/app/avaliation/risco/qpaf/qpaf.component.html
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-        <h1 i18n>Questionário de Prontidão para a Actividade Fisica <br />(PAR-Q)</h1>
+        <h1 i18n>Questionário de Prontidão para a Actividade Fisica (PAR-Q)</h1>
     </div>
 
     <div class="section">
