--- a/src/app/avaliation/risco/qpaf/qpaf.component.scss
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.scss
@@ -43,6 +43,7 @@ em {
         width: 90%;
         margin-bottom: 4px;
         display: inline-flex;
+        background-color: rgba(255, 255, 255, 0.8);
     }
 
     ::-webkit-scrollbar {
