--- a/src/app/avaliation/risco/rdc/rdc.component.html
+++ b/src/app/avaliation/risco/rdc/rdc.component.html
@@ -1,7 +1,6 @@
 <div class="container">
     <div class="header">
         <h1 i18n>Risco de Desenvolvimento de Cardiopatia</h1>
-        <h3 i18n>Fatores de Risco</h3>
     </div>
 
     <div class="section">
@@ -103,7 +102,7 @@
                     <mat-list>
                         <mat-list-item>
                             <mat-form-field>
-                                <mat-label i18n>percentagem</mat-label>
+                                <mat-label i18n>Percentagem</mat-label>
                                 <input matInput #gc="ngModel" name="gc" [(ngModel)]="rdcData.gc" (change)="calcRisco()">
                             </mat-form-field>
                         </mat-list-item>
