--- a/src/app/avaliation/risco/rdc/rdc.component.scss
+++ b/src/app/avaliation/risco/rdc/rdc.component.scss
@@ -16,6 +16,13 @@
         width: 0px;
         background: transparent; /* make scrollbar transparent */
     }
+    .mat-card {
+        width: 90%;
+        margin-bottom: 4px;
+        display: inline-flex;
+        background-color: rgba(255, 255, 255, 0.88);
+    }
+
 }
 
 
