--- a/src/app/commun/menu/menu.component.html
+++ b/src/app/commun/menu/menu.component.html
@@ -3,7 +3,7 @@
     <span class="menu-spacer"></span>
     <span class="menu-username" *ngIf="selectedStudent.id"><a routerLink="/new/{{selectedStudent.id}}">{{selectedStudent.nome}}</a></span>
     <a [routerLink]="['/configs']">
-        <mat-icon class="menu-icon" aria-hidden="false" aria-label="menu">menu</mat-icon>
+        <mat-icon class="menu-icon" aria-hidden="false" aria-label="menu">settings</mat-icon>
     </a>
     <mat-icon class="menu-icon" aria-hidden="false" aria-label="log out" (click)="logout()">power_settings_new</mat-icon>
 </mat-toolbar>
