--- a/src/app/dashboard/dash/dash.component.html
+++ b/src/app/dashboard/dash/dash.component.html
@@ -8,7 +8,11 @@
         <mat-form-field>
             <mat-label i18n>Aluno</mat-label>
             <mat-select #f="ngModel"  [ngModel]="student"  (selectionChange)="selected(f.value)">
-                <mat-option *ngFor="let s of students" [value]="s">{{s.nome}}</mat-option>
+                <mat-option *ngFor="let s of students" [value]="s">
+                    <span [class.inactive] = "s.active=='0'">
+                        {{s.nome}}
+                    </span>
+                </mat-option>
             </mat-select>
         </mat-form-field>
 
