--- a/src/styles.scss
+++ b/src/styles.scss
@@ -128,7 +128,17 @@ td > input {
   .container{
     width: 60vw;
     margin: auto;
+    -webkit-box-shadow: 10px 0px 13px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 0px 13px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 0px 13px 0px rgba(0,0,0,0.75);
   }
+
+  .header, .mat-toolbar{
+    -webkit-box-shadow: 10px 0px 13px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 0px 13px 0px rgba(0,0,0,0.75);
+box-shadow: 10px 0px 13px 0px rgba(0,0,0,0.75);
+  }
+
 
   .section{
     width: 96%;
